--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,7 +16,6 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "The git hub repo ${{github.repository}} has been cloned to the runner."
       - name: Listing the files in the runner
-      - run: |
-        ls ${{github.workspace}}
+      - run: ls ${{github.workspace}}
       - name: Checking status
       - run: echo "The job's status is ${{job.status}}"
