--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,7 +14,7 @@ jobs:
         run: echo "The job is running on the ${{runner.os}} server hosted by Github"
       - name: Check out our github repo
         uses: actions/checkout@v3
-        run: echo "The git hub repo ${{github.repository}} has been cloned to the runner."
+      - run: echo "The git hub repo ${{github.repository}} has been cloned to the runner."
       - name: Listing the files in the runner
         run: |
           ls -alh
